// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Decoding Progress: Match Snapshots 1 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <AppHeader
    navigation={
      Object {
        "getParam": [MockFunction] {
          "calls": Array [
            Array [
              "uri",
              "NO-ID",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "goBack": [MockFunction],
        "navigate": [MockFunction],
      }
    }
    primary="#E88C0C"
    theme={
      Object {
        "background": "#FFF",
        "color": "#17212D",
        "isDark": false,
      }
    }
  />
  <ImageProgress
    background="#FFF"
    primaryColor="#E88C0C"
    progress={0}
  />
</View>
`;

exports[`Decoding Progress: Match Snapshots 2 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <AppHeader
    navigation={
      Object {
        "getParam": [MockFunction] {
          "calls": Array [
            Array [
              "uri",
              "NO-ID",
            ],
            Array [
              "uri",
              "NO-ID",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "goBack": [MockFunction],
        "navigate": [MockFunction],
      }
    }
    primary="#E88C0C"
    theme={
      Object {
        "background": "#17212D",
        "color": "#FFF",
        "isDark": false,
      }
    }
  />
  <ImageProgress
    background="#17212D"
    primaryColor="#E88C0C"
    progress={0}
  />
</View>
`;
